# joegamevoting

./: .dockerignore  .gitignore  Dockerfile-backend  Dockerfile-frontend  README.md  docker-compose.yml  gamevotes.db.REMOVED.git-id  pyproject.toml  ripfun.txt  startbackend.bat  startfrontend.bat  test.http
app/: discordbot.py  main.py
app/models/: __init__.py  auth.py  game.py  game_discord.py
app/routers/: auth.py  game.py  game_discord.py  socketio.py
data/: count.csv  culled.json  culled.py  culled_old.json  downloadgame.py  downloadgamedata.py  gamevotes.db.REMOVED.git-id  messagecount.py  round1_culled.json  round2p1.json  round2p2.json  round3p1.json  round4p1.json  round4p2.json
frontend/: .gitignore  README.md  nuxt.config.js  package.json
frontend/.nuxt/: App.js  axios.js  index.js  nuxt-socket-io.js  router.js  routes.json  store.js
frontend/.nuxt/components/: index.js
frontend/.nuxt/vetur/: tags.json
frontend/components/: GameSearchBar.vue  GameVotes.vue  GameVotesDiscord.vue  VoteList.vue  VoteListSimple.vue
frontend/layouts/: default.vue
frontend/pages/: discord_callback.vue  index.vue  me.vue  pastvotes.vue  test.vue
frontend/pages/game/: _id.vue
frontend/pages/game_discord/: _id.vue
frontend/static/: culled.json
frontend/store/: index.js  localStorage.js
nginx/: default.conf
