[tool.poetry]
name = "joegames"
version = "0.1.0"
description = ""
authors = ["Nodja <me@nodja.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.6.0"
fastapi = "^0.63.0"
uvicorn = "^0.13.3"
requests-oauthlib = "^1.3.0"
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
websockets = "^8.1"
aioredis = "^1.3.1"
python-socketio = "^5.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
